# back-end-test-project-coderockr

./: README.md  pyproject.toml
src/controller/: create_account_controller.py
src/models/: authentication_model.py  create_account_db_model.py
src/usecases/: authentication.py  create_account_db.py  email_already_exists.py
tests/controller/: test_create_account_controller.py
