[project]
name = "backend-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Tarcizio Santos", email = "tarciziosantos.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"